# gram-diff-mimo

./: .gitignore  README.md  pyproject.toml
examples/: basic_mimo_test.py  paper_structured_eval.py  pretrained_gram_diff_eval.py
notebooks/: gram_diff_rayleigh_figures.ipynb
src/gram_diff_mimo/diffusion/: __init__.py  denoiser.py  guidance.py  pretrained.py  sampler.py  schedules.py
src/gram_diff_mimo/mimo/: channel.py  estimators.py  metrics.py  pilots.py
tests/: test_diffusion_guidance.py  test_mimo_estimators.py
