[project]
authors = [{name = "broy", email = "roybrateesh@gmail.com"}]
dependencies = []
name = "gram-diff-mimo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gram_diff_mimo = { path = ".", editable = true }
torch = { version = "*", index = "https://download.pytorch.org/whl/cu132" }
torchvision = { version = "*", index = "https://download.pytorch.org/whl/cu132" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.6,<3"
scipy = ">=1.17.1,<2"
matplotlib = ">=3.10.9,<4"
pytest = ">=9.0.3,<10"
tqdm = ">=4.67.3,<5"
pyyaml = ">=6.0.3,<7"
ipykernel = ">=7.2.0,<8"
